--- a/package.json
+++ b/package.json
@@ -40,5 +40,9 @@
     "css-loader": "^7.1.2",
     "nodemon": "^3.1.9",
     "style-loader": "^4.0.0"
-  }
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
