--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.7",
     "@mui/material-nextjs": "^6.4.3",
-    "@mui/x-charts": "^7.27.1",
+    "@mui/x-charts": "^8.3.0",
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "bootstrap": "^5.3.3",
@@ -26,7 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.476.0",
     "mongoose": "^8.12.1",
-    "next": "15.1.7",
+    "next": "^15.3.2",
     "nodemailer": "^6.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
