--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.13",
-    "@mui/x-charts": "^7.27.1",
+    "@mui/x-charts": "^7.29.1",
+    "@react-spring/web": "^9.7.5",
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "bootstrap": "^5.3.3",
@@ -26,8 +27,8 @@
     "mongoose": "^8.12.1",
     "next": "^14.1.4",
     "nodemailer": "^6.10.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-icons": "^5.5.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^7.2.0",
@@ -38,6 +39,10 @@
     "css-loader": "^7.1.2",
     "nodemon": "^3.1.9",
     "style-loader": "^4.0.0"
+  },
+  "overrides": {
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "keywords": [],
   "author": "",
